force-app/main/default/objects/Supply_Chain_Configuration__c/Supply_Chain_Configuration__c.object-meta.xml
<CustomObject>
    <label>Supply Chain Configuration</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Supply Chain Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Chain Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>