force-app/main/default/objects/Supply_Chain_Configuration__c/fields/Game_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Game_Configuration__c</fullName>
    <label>Game Configuration</label>
    <referenceTo>Game_Configuration__c</referenceTo>
    <relationshipLabel>Supply Chain Configurations</relationshipLabel>
    <relationshipName>Supply_Chain_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>