force-app/main/default/objects/Supply_Chain_Configuration__c/fields/Initial_Demand__c.field-meta.xml
<CustomField>
    <fullName>Initial_Demand__c</fullName>
    <label>Initial Demand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>