force-app/main/default/objects/Supply_Chain_Configuration__c/fields/Initial_Funds__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funds__c</fullName>
    <label>Initial Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>