force-app/main/default/objects/Supply_Chain_Configuration__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>